--- a/Exercises/11. OOP Basic Exercise.ipynb
+++ b/Exercises/11. OOP Basic Exercise.ipynb
@@ -247,15 +247,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mikael.folkesson@protonmail.com\n",
+      "mikael.folkesson\n",
+      "protonmail\n",
+      "com\n",
+      "mikael_@hc.cm\n",
+      "göran@pudel.se\n"
+     ]
+    }
+   ],
    "source": [
     "class Email:\n",
     "    def __init__(self, address=\"\") -> None:\n",
     "        if address != \"\":\n",
     "            if self._is_address_ok(address):\n",
     "                self._address=address\n",
+    "                self._username=address[:address.find(\"@\")]\n",
+    "                dot_pos = address[::-1].find(\".\")\n",
+    "                self._domain=address[address.find(\"@\")+1:-dot_pos-1]\n",
+    "                self._topdomain=address[len(address)-dot_pos:]\n",
     "            else:\n",
     "                print(\"E-mail address invalid\")\n",
     "    \n",
@@ -268,6 +285,31 @@
     "                return True\n",
     "        return False\n",
     "    \n",
+    "    def _is_username_ok(self, username:str):\n",
+    "        if username.find(\"@\") == -1:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def _is_domain_ok(self, domain:str):\n",
+    "        if domain.find(\"@\") == -1:\n",
+    "            dot_pos = domain.find(\".\")\n",
+    "            if dot_pos != -1:\n",
+    "                if domain.count(\".\")<2:\n",
+    "                    return True if self._is_topdomain_ok(domain[len(domain)-dot_pos+2:]) else False\n",
+    "                else:\n",
+    "                    return False\n",
+    "            else:\n",
+    "                return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def _is_topdomain_ok(self, topdomain:str):\n",
+    "        if topdomain.find(\"@\") == -1 and topdomain.find(\".\") == -1:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
     "    @property\n",
     "    def address(self):\n",
     "        return self._address\n",
@@ -276,10 +318,66 @@
     "    def address(self, address):\n",
     "        if self._is_address_ok(address):\n",
     "            self._address=address\n",
+    "        else:\n",
+    "            print(\"E-mail address invalid\")\n",
+    "    \n",
+    "    @property\n",
+    "    def username(self):\n",
+    "        return self._username\n",
+    "    \n",
+    "    @username.setter\n",
+    "    def username(self, username:str):\n",
+    "        if self._is_username_ok(username):\n",
+    "            self._username=username\n",
+    "            self._address=username+'@'+self._domain+\".\"+self._topdomain\n",
+    "        else:\n",
+    "            print(\"Username invalid\")\n",
     "\n",
+    "    @property\n",
+    "    def domain(self):\n",
+    "        return self._domain\n",
+    "    \n",
+    "    @domain.setter\n",
+    "    def domain(self, domain:str):\n",
+    "        if self._is_domain_ok(domain):\n",
+    "            dot_pos=domain.find(\".\")\n",
+    "            if dot_pos == -1:\n",
+    "                self._domain=domain\n",
+    "            else:\n",
+    "                self.topdomain = domain[len(domain)-dot_pos+2:]\n",
+    "                self._domain=domain[:dot_pos]\n",
+    "            self._address=self.username+'@'+self._domain+\".\"+self._topdomain\n",
+    "        else:\n",
+    "            print(\"Domain invalid\")\n",
+    "\n",
+    "    @property\n",
+    "    def topdomain(self):\n",
+    "        return self._topdomain\n",
+    "    \n",
+    "    @topdomain.setter\n",
+    "    def topdomain(self, topdomain:str):\n",
+    "        if self._is_topdomain_ok(topdomain):\n",
+    "            self._topdomain=topdomain\n",
+    "            self._address=self.username+'@'+self.domain+\".\"+topdomain\n",
+    "        else:\n",
+    "            print(\"Topdomain invalid\")\n",
     "# Fortsätt genom att lägga till setters och getters för användarnamn, domän och toppdomän\n",
     "\n",
-    "min_mail = Email(\"m@gmailc.om\")"
+    "min_mail = Email(\"mikael.folkesson@protonmail.com\")\n",
+    "print(min_mail.address)\n",
+    "print(min_mail._username)\n",
+    "print(min_mail._domain)\n",
+    "print(min_mail._topdomain)\n",
+    "\n",
+    "min_mail.address = \"mikael_@hc.cm\"\n",
+    "\n",
+    "print(min_mail.address)\n",
+    "\n",
+    "min_mail.username = \"göran\"\n",
+    "min_mail.domain = \"pudel.com\"\n",
+    "min_mail.topdomain = \"se\"\n",
+    "\n",
+    "print(min_mail.address)"
    ]
   }
  ],
