GPT2 Image to text

--- a/Exercises/11. OOP Basic Exercise.ipynb
+++ b/Exercises/11. OOP Basic Exercise.ipynb
@@ -247,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mikael.folkesson@protonmail.com\n",
-      "mikael.folkesson\n",
-      "protonmail\n",
+      "mikael.f@gonka.com\n",
+      "mikael.f\n",
+      "gonka\n",
       "com\n",
       "mikael_@hc.cm\n",
       "göran@pudel.se\n"
@@ -361,9 +361,8 @@
     "            self._address=self.username+'@'+self.domain+\".\"+topdomain\n",
     "        else:\n",
     "            print(\"Topdomain invalid\")\n",
-    "# Fortsätt genom att lägga till setters och getters för användarnamn, domän och toppdomän\n",
     "\n",
-    "min_mail = Email(\"mikael.folkesson@protonmail.com\")\n",
+    "min_mail = Email(\"mikael.f@gonka.com\")\n",
     "print(min_mail.address)\n",
     "print(min_mail._username)\n",
     "print(min_mail._domain)\n",
