--- a/Code-Along/Demo/006. Foor_loops.ipynb
+++ b/Code-Along/Demo/006. Foor_loops.ipynb
@@ -7,7 +7,7 @@
     "# For loops\n",
     "A for loop is used for iterating over a sequence. (Example: a list, string, dictionary or a range)\n",
     "\n",
-    "This is less like the for keyword in other programming languages, and works more lika an iterator method as found in other object oriented programming languages. (eg. C#'s foreach-loop)"
+    "This is less like the for keyword in other programming languages, and works more like an iterator method as found in other object oriented programming languages. (eg. C#'s foreach-loop)"
    ]
   },
   {
