--- a/Code-Along/Demo/007. Lists.ipynb
+++ b/Code-Along/Demo/007. Lists.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Mini-uppgift\n",
     "\n",
-    "Skriv ett program som ber användaren mata in färger, en i taget, tills anvädarens input är tom. Varje färg ska läggas i en lista, och när användarens inmatning är slut skruvs listan ut, samt hur många färger det är på listan."
+    "Skriv ett program som ber användaren mata in färger, en i taget, tills anvädarens input är tom. Varje färg ska läggas i en lista, och när användarens inmatning är slut skrivs listan ut, samt hur många färger det är på listan."
    ]
   },
   {
@@ -101,10 +101,10 @@
    "metadata": {},
    "source": [
     "## Indexing and slicing\n",
-    "- List items are indeced, the first item has index [0]\n",
+    "- List items are indexed, the first item has index [0]\n",
     "- Make sure the index exists, otherwise the program will crash (OK when slicing)\n",
     "- Negative indexing: -1 refers to the last item, -2 to the second last etc\n",
-    "- Slicing: Specifying a range of indexes retyrbs a new list with the specified items. [start:stop:step (optional)]"
+    "- Slicing: Specifying a range of indexes creates a new list with the specified items. [start:stop:step (optional)]"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "metadata": {},
    "source": [
     "# Miniuppgift 2\n",
-    "Skapa manuellt en lista i koden med 5 frukter. Använd list comprehension för att skapa en nu lista med samma frukter, men med ett utropstecken i slutet på varje fruktsträng."
+    "Skapa manuellt en lista i koden med 5 frukter. Använd list comprehension för att skapa en ny lista med samma frukter, men med ett utropstecken i slutet på varje fruktsträng."
    ]
   },
   {
@@ -341,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
