--- a/Code-Along/Demo/008. Strings.ipynb
+++ b/Code-Along/Demo/008. Strings.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "## Escape characters\n",
-    "To insert characteers that are illegal in a string, use an escape character. An escape character is a backslash followd by the character you want to insert. An example of an illegal character is a double quote inside a string that is surrounded by double quotes.\n",
+    "To insert characteers that are illegal in a string, use an escape character. An escape character is a backslash followed by the character you want to insert. An example of an illegal character is a double quote inside a string that is surrounded by double quotes.\n",
     "\n",
     "### Common escape characters\n",
     "- \\\\\" Double quote\n",
