--- a/Code-Along/Demo/009. Functions.ipynb
+++ b/Code-Along/Demo/009. Functions.ipynb
@@ -42,7 +42,7 @@
     "    for person in people:\n",
     "        greet(person)\n",
     "\n",
-    "greeting(\"Pelle\")\n",
+    "greet(\"Pelle\")\n",
     "\n",
     "people = [\"Fredrik\", \"Camilla\", \"Anders\"]\n",
     "greet_people(people)\n",
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "## Abstraction levels\n",
-    "In computing, an abstraction layer or level isd a way of hiding the working details of a subsystem. When working on a low level of abstraction we're dealing with the fine details of teh code, while, if we work on a high level of abstraction the details are hidden from us, so we get more of an overview of the system.\n",
+    "In computing, an abstraction layer or level is a way of hiding the working details of a subsystem. When working on a low level of abstraction we're dealing with the fine details of the code, while, if we work on a high level of abstraction the details are hidden from us, so we get more of an overview of the system.\n",
     "\n",
     "For each stack level (function calling a function etc), the level of abstraction goes down."
    ]
