--- a/Code-Along/Demo/011. Sets.ipynb
+++ b/Code-Along/Demo/011. Sets.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "# Sets\n",
-    "- Set items are unordered, ungangeable, and do not allow duplicate values\n",
+    "- Set items are unordered, unchangeable, and do not allow duplicate values\n",
     "- Items can not be accessed using indexes or slicing\n",
     "- Set items can be of any data type, and can contain different data types\n",
     "- No duplicates"
