--- a/Code-Along/Demo/014. Debugging.ipynb
+++ b/Code-Along/Demo/014. Debugging.ipynb
@@ -10,7 +10,7 @@
     "## Break points\n",
     "In all IDE's (Integrated Development Environment) the developer has the possibility to debug code by stepping through instructions one-by-one and look at the internal states (memory/variables) for each step.\n",
     "\n",
-    "We can set one or multiple breakpoints at any line in our code. When starting the program in debug mode, the ode will run up until it hits the first breakpoint. From there we can inspect the current state of our program, and we can choose to either run or program until it hits the next breakpoint, or we can use the 'step over' function of the debugger to step one instruction at a time."
+    "We can set one or multiple breakpoints at any line in our code. When starting the program in debug mode, the code will run up until it hits the first breakpoint. From there we can inspect the current state of our program, and we can choose to either run or program until it hits the next breakpoint, or we can use the 'step over' function of the debugger to step one instruction at a time."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "## Miniuppgift\n",
-    "Skriv ut sekvensesr ur en sträng, där första tecknet i sekvensen är en siffra, och den sista är samma siffra, avbryt om det kommer en bokstav. Skriv ut hela sekvensen, men skriv ut den funna sekvensen med annan färg. En ny rad för varje färg. "
+    "Skriv ut sekvenser ur en sträng, där första tecknet i sekvensen är en siffra, och den sista är samma siffra, avbryt om det kommer en bokstav. Skriv ut hela sekvensen, men skriv ut den funna sekvensen med annan färg. En ny rad för varje färg. "
    ]
   },
   {
