--- a/Code-Along/Demo/017. Recursive.ipynb
+++ b/Code-Along/Demo/017. Recursive.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of main()\n",
+      "Start of func_a()\n",
+      "Start of func_b()\n",
+      "End of func_b()\n",
+      "End of func_a()\n",
+      "Endof main()\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    print(\"Start of main()\")\n",
@@ -38,8 +51,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
