more proofreading of notes

--- a/Code-Along/Demo/022. Properties.ipynb
+++ b/Code-Along/Demo/022. Properties.ipynb
@@ -25,7 +25,7 @@
     "        self._salary = \"Salary not set\" if salary < 0 else salary\n",
     "    \n",
     "    # Getter and setter methods. Internally methods, but can be accessed as attributes from the outside\n",
-    "    # Decorators startting with '@'. The name is the name of the property.\n",
+    "    # Decorators starting with '@'. The name is the name of the property.\n",
     "    @property\n",
     "    def salary(self):\n",
     "        return self._salary\n",
