--- a/Code-Along/Demo/029. Name binding.ipynb
+++ b/Code-Along/Demo/029. Name binding.ipynb
@@ -309,7 +309,7 @@
    "metadata": {},
    "source": [
     "## Shallow vs Deep copy\n",
-    "- Assignment statemsnts in Python do not create copies of objects, the only bind names to an object.\n",
+    "- Assignment statements in Python do not create copies of objects, the only bind names to an object.\n",
     "- A **shallow copy** means constructing a new collection object and then populating it with references to the child objects found in the original. In essence, a shallow copy is only one level deep. The copying process does not recurse, and therefore won't create copies of the child objects themselves.\n",
     "- A **deep copy** performs the copying process recursively, i.e. first constructing a new collection object and then revursively populating it with copies of the child objects found in the original. Copying an object this way walks the whole object tree to create a fully independent clone of the original object and all of its children. "
    ]
