minor changes exercises

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -93,7 +93,7 @@
     "---\n",
     "## 3. Counting words (*)\n",
     "\n",
-    "Count the number of words in this sentence: \"A picture says more than a thousand words, a matematical formula says more than a thousand pictures.\" (*) \n",
+    "Count the number of words in this sentence: \"A picture says more than a thousand words, a mathematical formula says more than a thousand pictures.\" (*) \n",
     "\n",
     "<details>\n",
     "\n",
@@ -194,31 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pelle\n",
-      "pelle ellep\n",
-      "\"Pelle\" is not a palindrome\n"
+      "\"pelle\" is not a palindrome\n"
      ]
     }
    ],
    "source": [
-    "sequence = input(\"Enter a sequence of letters to check if it is a palindrome: \")\n",
+    "sequence = input(\"Enter a sequence of letters to check if it is a palindrome: \").lower().replace(\" \",\"\")\n",
     "\n",
-    "lowered_sequence = sequence.lower()\n",
-    "stripped_sequence = lowered_sequence.replace(\" \",\"\")\n",
-    "print(stripped_sequence)\n",
-    "\n",
-    "reversed_list = list(reversed(stripped_sequence))\n",
-    "reversed_string = \"\".join(reversed_list)\n",
-    "print(stripped_sequence,reversed_string)\n",
-    "\n",
-    "if( stripped_sequence == reversed_string):\n",
+    "if(sequence == str(\"\".join(list(sequence))[::-1])):\n",
     "    print(f'\"{sequence}\" is a palindrome')\n",
     "else:\n",
     "    print(f'\"{sequence}\" is not a palindrome')"
@@ -247,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,9 +252,10 @@
    "source": [
     "sentence = \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
     "vowels=0\n",
+    "vowel_list = ['a','e','i','o','u','y','å','ä','ö']\n",
     "\n",
     "for letter in sentence:\n",
-    "    if letter == 'a' or letter == 'e' or letter == 'i' or letter == 'o' or letter == 'u' or letter == 'y' or letter == 'å' or letter == 'ä' or letter == 'ö':\n",
+    "    if letter in vowel_list:\n",
     "        vowels +=1\n",
     "\n",
     "print(f'The sentence \"{sentence}\" \\nhas {vowels} vowels in it.')"
@@ -284,27 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KoK-a-non dod-u lol-i-sos-tot-a u-tot-?\n"
+      "HoH-e-joj\n"
      ]
     }
    ],
    "source": [
     "text = input(\"Enter what you want to get translated into Rövarspråket: \")\n",
     "translated_text = \"\"\n",
+    "vowel_list = ['a','e','i','o','u','y','å','ä','ö']\n",
     "\n",
     "for i, letter in enumerate(text):\n",
     "    if letter == ' ' and i<len(text)-1:\n",
     "        translated_text += ' '\n",
     "    elif letter == '!' or letter == '?':\n",
     "        translated_text += letter\n",
-    "    elif letter != 'a' and letter != 'e' and letter != 'i' and letter != 'o' and letter != 'u' and letter != 'y' and letter != 'å' and letter != 'ä' and letter != 'ö':\n",
+    "    elif letter not in vowel_list:\n",
     "        if i<len(text)-1:\n",
     "            translated_text += letter + \"o\" + letter+\"-\"\n",
     "        else:\n",
@@ -395,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
