--- a/Exercises/07. Collections.ipynb
+++ b/Exercises/07. Collections.ipynb
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'3', '1', '4', '7'}\n",
-      "{'', '1', '2', '3', '9'}\n",
-      "The common elements are: {'3', '1'}\n"
+      "{'7', '4', '3', '1'}\n",
+      "{'8', '6', '7', '2', '3'}\n",
+      "The common elements are: 7, 3\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
     "print(set2)\n",
     "intersect = set1.intersection(set2)\n",
     "\n",
-    "print(f\"The common elements are: {intersect}\")"
+    "print(f\"The common elements are: {', '.join(list(intersect))}\")"
    ]
   },
   {
@@ -249,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thirty four thousand five hundred twenty three "
+      "sixty seven thousand five hundred and thirty eight "
      ]
     }
    ],
@@ -265,7 +265,7 @@
     "\n",
     "    base_dict = {\n",
     "        1000: \"thousand\",\n",
-    "        100: \"hundred\",\n",
+    "        100: \"hundred and\",\n",
     "        90: \"ninety\",\n",
     "        80: \"eighty\",\n",
     "        70: \"seventy\",\n",
@@ -337,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
