--- a/Exercises/11. OOP Basic Exercise.ipynb
+++ b/Exercises/11. OOP Basic Exercise.ipynb
@@ -192,7 +192,7 @@
     "---\n",
     "## 4. One thousand cars (*)\n",
     "\n",
-    "Create a class that represents a car. Every car can have a color and a length. When a new car is instantiated it gets a random color, and a random length (between 3 and 5 meters). Instatiate 1000 cars a save them in a list. Then print the sum of the length of all green cars in the list."
+    "Create a class that represents a car. Every car can have a color and a length. When a new car is instantiated it gets a random color, and a random length (between 3 and 5 meters). Instantiate 1 000 cars and save them in a list. Then print the sum of the length of all green cars in the list."
    ]
   },
   {
@@ -221,12 +221,12 @@
     "for i in range(1000):\n",
     "    cars.append(Car())\n",
     "\n",
-    "sum=0\n",
+    "green_sum=0\n",
     "for car in cars:\n",
     "    if car.color == \"green\":\n",
-    "        sum+= car.length\n",
+    "        green_sum+= car.length\n",
     "\n",
-    "print(f\"Sum of length of all green cars is: {sum}\")"
+    "print(f\"Sum of length of all green cars is: {green_sum}\")"
    ]
   },
   {
