--- a/Exercises/09. Error detection.ipynb
+++ b/Exercises/09. Error detection.ipynb
@@ -54,7 +54,7 @@
     "import numpy as np\n",
     "\n",
     "def distance(x,y):\n",
-    "    return np.sqrt([x**2+y**2)\n",
+    "    return np.sqrt(x**2+y**2)\n",
     "print(distance(0.5,0.5))"
    ]
   },
