Minor changes when browsing through the files

--- a/Code-Along/Demo/L030_Exam exercises.ipynb
+++ b/Code-Along/Demo/L030_Exam exercises.ipynb
@@ -9,11 +9,13 @@
     "## Uppgift 3 (?)\n",
     "Skapa en funktion som tar in ett heltal n som parameter och skriver ut mönstret nedan.\n",
     "Exempel när n = 5:\n",
+    "```\n",
     "x x x x x\n",
     "x o x o x\n",
     "x x x x x\n",
     "x o x o x\n",
-    "x x x x x"
+    "x x x x x\n",
+    "```"
    ]
   },
   {
@@ -157,14 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "351.85837720205683\n"
+      "Please input only numbers > 0!\n",
+      "Please input only numbers > 0!\n",
+      "Please input only numbers > 0!\n",
+      "113.09733552923255\n"
      ]
     }
    ],
@@ -285,6 +290,7 @@
     "            print(f\"{currency_name}: {count}\")\n",
     "        number %= currency  # Use modulus to update the remaining amount\n",
     "\n",
+    "    # Min gamla kod, chatGTP-refakturering ovan.\n",
     "    # for currency, currency_name in currency_dict.items():\n",
     "    #     j = 1\n",
     "    #     count=0\n",
